--- a/properties/DataStoreManager.properties
+++ b/properties/DataStoreManager.properties
@@ -22,7 +22,7 @@ datastore.type=mysql
 # [ \u5fc5\u9808 ] yes
 # [  \u4f8b  ] IP\u30a2\u30c9\u30ec\u30b9\u306e\u5834\u5408\u3001192.168.1.10:5121\u7b49
 #----------------------------------------------------------------------------------------------------------------------------------------------------
-datastore.oracle.url=192.168.11.13:5121
+datastore.oracle.url=oracleserver:5121
 
 #----------------------------------------------------------------------------------------------------------------------------------------------------
 # [ \u6982\u8981 ] ORACLE\u306e\u63a5\u7d9a\u5148SID\u3092\u6307\u5b9a\u3057\u307e\u3059\u3002
@@ -30,7 +30,7 @@ datastore.oracle.url=192.168.11.13:5121
 # [ \u5fc5\u9808 ] yes
 # [  \u4f8b  ] testsid
 #----------------------------------------------------------------------------------------------------------------------------------------------------
-datastore.oracle.sid=testsid
+datastore.oracle.sid=oralcesid
 
 #----------------------------------------------------------------------------------------------------------------------------------------------------
 # [ \u6982\u8981 ] ORACLE\u306e\u63a5\u7d9a\u6642\u306e\u30e6\u30fc\u30b6\u540d\u3092\u6307\u5b9a\u3057\u307e\u3059\u3002
@@ -57,7 +57,7 @@ datastore.oracle.password=oracle
 # [ \u5fc5\u9808 ] yes
 # [  \u4f8b  ] IP\u30a2\u30c9\u30ec\u30b9\u306e\u5834\u5408\u3001192.168.1.10:5121\u7b49
 #----------------------------------------------------------------------------------------------------------------------------------------------------
-datastore.mysql.url=192.168.11.13:5121
+datastore.mysql.url=mysqlserver:5121
 
 #----------------------------------------------------------------------------------------------------------------------------------------------------
 # [ \u6982\u8981 ] MYSQL\u306e\u63a5\u7d9a\u5148SID\u3092\u6307\u5b9a\u3057\u307e\u3059\u3002
@@ -65,7 +65,7 @@ datastore.mysql.url=192.168.11.13:5121
 # [ \u5fc5\u9808 ] yes
 # [  \u4f8b  ] testsid
 #----------------------------------------------------------------------------------------------------------------------------------------------------
-datastore.mysql.sid=testsid
+datastore.mysql.sid=mysqlsid
 
 #----------------------------------------------------------------------------------------------------------------------------------------------------
 # [ \u6982\u8981 ] MYSQL\u306e\u63a5\u7d9a\u6642\u306e\u30e6\u30fc\u30b6\u540d\u3092\u6307\u5b9a\u3057\u307e\u3059\u3002
@@ -92,7 +92,7 @@ datastore.mysql.password=mysql
 # [ \u5fc5\u9808 ] yes
 # [  \u4f8b  ] IP\u30a2\u30c9\u30ec\u30b9\u306e\u5834\u5408\u3001192.168.1.10:5121\u7b49
 #----------------------------------------------------------------------------------------------------------------------------------------------------
-datastore.postgresql.url=192.168.11.13:5121
+datastore.postgresql.url=postgresqlserver:5121
 
 #----------------------------------------------------------------------------------------------------------------------------------------------------
 # [ \u6982\u8981 ] POSTGRESQL\u306e\u63a5\u7d9a\u5148SID\u3092\u6307\u5b9a\u3057\u307e\u3059\u3002
@@ -100,7 +100,7 @@ datastore.postgresql.url=192.168.11.13:5121
 # [ \u5fc5\u9808 ] yes
 # [  \u4f8b  ] testsid
 #----------------------------------------------------------------------------------------------------------------------------------------------------
-datastore.postgresql.sid=testsid
+datastore.postgresql.sid=postgresqlsid
 
 #----------------------------------------------------------------------------------------------------------------------------------------------------
 # [ \u6982\u8981 ] POSTGRESQL\u306e\u63a5\u7d9a\u6642\u306e\u30e6\u30fc\u30b6\u540d\u3092\u6307\u5b9a\u3057\u307e\u3059\u3002
@@ -129,19 +129,19 @@ datastore.postgresql.password=postgresql
 # UESRS\u30c6\u30fc\u30d6\u30eb\u306e\u63a5\u7d9a\u5148\u30c7\u30fc\u30bf\u30b9\u30c8\u30a2\u7a2e\u5225
 datastore.type.USERS=mysql
 # UESRS\u30c6\u30fc\u30d6\u30eb\u306eORACLE\u8a2d\u5b9a\u5024
-datastore.oracle.url.EXAMPLE=192.168.11.13:5121
-datastore.oracle.sid.EXAMPLE=testsid
-datastore.oracle.user.EXAMPLE=orausr
-datastore.oracle.password.EXAMPLE=oracle
+datastore.oracle.url.USERS=usersoracleserver:5121
+datastore.oracle.sid.USERS=usersoralcesid
+datastore.oracle.user.USERS=usersorausr
+datastore.oracle.password.USERS=usersoracle
 # UESRS\u30c6\u30fc\u30d6\u30eb\u306eMYSQL\u8a2d\u5b9a\u5024
-datastore.mysql.url.EXAMPLE=192.168.11.13:5121
-datastore.mysql.sid.EXAMPLE=testsid
-datastore.mysql.user.EXAMPLE=orausr
-datastore.mysql.password.EXAMPLE=oracle
+datastore.mysql.url.USERS=usersmysqlserver:5121
+datastore.mysql.sid.USERS=usersmysqlsid
+datastore.mysql.user.USERS=usersmysqlusr
+datastore.mysql.password.USERS=usersmysql
 # UESRS\u30c6\u30fc\u30d6\u30eb\u306ePOSTGRESQL\u8a2d\u5b9a\u5024
-datastore.postgresql.url.EXAMPLE=192.168.11.13:5121
-datastore.postgresql.sid.EXAMPLE=testsid
-datastore.postgresql.user.EXAMPLE=orausr
-datastore.postgresql.password.EXAMPLE=oracle
+datastore.postgresql.url.USERS=userspostgresqlserver:5121
+datastore.postgresql.sid.USERS=userspostgresqlsid
+datastore.postgresql.user.USERS=usersposusr
+datastore.postgresql.password.USERS=userspostgresql
 #####################################################################################################################################################
 
