--- a/src/jp/co/dk/datastoremanager/property/DataStoreManagerProperty.properties
+++ b/src/jp/co/dk/datastoremanager/property/DataStoreManagerProperty.properties
@@ -129,19 +129,19 @@ datastore.postgresql.password=postgresql
 # UESRS\u30c6\u30fc\u30d6\u30eb\u306e\u63a5\u7d9a\u5148\u30c7\u30fc\u30bf\u30b9\u30c8\u30a2\u7a2e\u5225
 datastore.type.USERS=mysql
 # UESRS\u30c6\u30fc\u30d6\u30eb\u306eORACLE\u8a2d\u5b9a\u5024
-datastore.oracle.url.EXAMPLE=192.168.11.13:5121
-datastore.oracle.sid.EXAMPLE=testsid
-datastore.oracle.user.EXAMPLE=orausr
-datastore.oracle.password.EXAMPLE=oracle
+datastore.oracle.url.USERS=192.168.11.13:5121
+datastore.oracle.sid.USERS=testsid
+datastore.oracle.user.USERS=orausr
+datastore.oracle.password.USERS=oracle
 # UESRS\u30c6\u30fc\u30d6\u30eb\u306eMYSQL\u8a2d\u5b9a\u5024
-datastore.mysql.url.EXAMPLE=192.168.11.13:5121
-datastore.mysql.sid.EXAMPLE=testsid
-datastore.mysql.user.EXAMPLE=orausr
-datastore.mysql.password.EXAMPLE=oracle
+datastore.mysql.url.USERS=192.168.11.13:5121
+datastore.mysql.sid.USERS=testsid
+datastore.mysql.user.USERS=orausr
+datastore.mysql.password.USERS=oracle
 # UESRS\u30c6\u30fc\u30d6\u30eb\u306ePOSTGRESQL\u8a2d\u5b9a\u5024
-datastore.postgresql.url.EXAMPLE=192.168.11.13:5121
-datastore.postgresql.sid.EXAMPLE=testsid
-datastore.postgresql.user.EXAMPLE=orausr
-datastore.postgresql.password.EXAMPLE=oracle
+datastore.postgresql.url.USERS=192.168.11.13:5121
+datastore.postgresql.sid.USERS=testsid
+datastore.postgresql.user.USERS=orausr
+datastore.postgresql.password.USERS=oracle
 #####################################################################################################################################################
 
