--- a/properties/test/datastoremanager/success/getnamelist.properties
+++ b/properties/test/datastoremanager/success/getnamelist.properties
@@ -1,4 +1,6 @@
 getnamelist_non=getnamelist_non
+getnamelist_single=getnamelist_single.VALUE
 getnamelist_single.NAME01=getnamelist_single.VALUE01
+getnamelist_multi=getnamelist_multi.VALUE
 getnamelist_multi.NAME01=getnamelist_multi.VALUE01
 getnamelist_multi.NAME02=getnamelist_multi.VALUE02
