パッケージ構成変更 メッセージファイルにテスト用のディレクトリが存在したが不要であるため、削除

--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="lib" path="messages/test"/>
+	<classpathentry kind="lib" path="messages"/>
 	<classpathentry kind="lib" path="properties/test"/>
 	<classpathentry kind="src" path="src/main/java"/>
 	<classpathentry kind="src" path="src/main/resources"/>
