--- a/.classpath
+++ b/.classpath
@@ -7,11 +7,12 @@
 	<classpathentry kind="src" path="src/test/java"/>
 	<classpathentry kind="src" path="src/test/resources"/>
 	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.26-bin.jar"/>
+	<classpathentry kind="lib" path="lib/message_1.0.0_all.jar"/>
+	<classpathentry kind="lib" path="lib/property_1.0.0_all.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="lib" path="lib/test/jmockit-coverage.jar"/>
 	<classpathentry kind="lib" path="lib/test/jmockit.jar"/>
 	<classpathentry kind="lib" path="lib/test/testtemplate_all.jar"/>
-	<classpathentry kind="lib" path="lib/message_1.0.0_all.jar"/>
-	<classpathentry kind="lib" path="lib/property_1.0.0_all.jar"/>
+	<classpathentry kind="lib" path="lib/logger_1.0.1_all.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
