--- a/build.properties
+++ b/build.properties
@@ -387,6 +387,12 @@ checkstyle_execute.checkstyle.formatter.tofile=.checkstyle_errors.txt
 # checkstyle_execute.checkstyle.formatter.tofile=.checkstyle_errors.xml
 
 #####################################################################################################################################################
+# AspectJ\u5b9f\u884c\u6642\u8a2d\u5b9a\u5024
+#####################################################################################################################################################
+aspectj_execute.aspectj.home=${aspectj.home}
+aspectj_execute.aspectj.jar=${aspectj.jar}
+
+#####################################################################################################################################################
 # \u30d3\u30eb\u30c9\u7528\u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u524a\u9664\u6642\u8a2d\u5b9a\u5024
 #####################################################################################################################################################
 clean.delete.dir=${class.dir}
