--- a/build_env.properties
+++ b/build_env.properties
@@ -24,3 +24,12 @@ findbugs.home=/home/dk/github_workspace/AntCommons/ant_tasks/findbugs/findbugs-3
 checkstyle.home=/home/dk/github_workspace/AntCommons/ant_tasks/checkstyle/checkstyle-5.6
 checkstyle.jar=${checkstyle.home}/checkstyle-5.6-all.jar
 checkstyle.config=${checkstyle.home}/sun_checks.xml
+
+#----------------------------------------------------------------------------------------------------------------------------------------------------
+# [ \u6982\u8981 ] AspectJ\u30a4\u30f3\u30b9\u30c8\u30fc\u30eb\u5148\u30c7\u30a3\u30ec\u30af\u30c8\u30ea
+# [ \u8aac\u660e ] AspectJ\u30a4\u30f3\u30b9\u30c8\u30fc\u30eb\u5148\u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u3092\u6307\u5b9a\u3057\u307e\u3059\u3002
+# [ \u5fc5\u9808 ] yes
+# [  \u4f8b  ] /opt/aspectj/aspectj1.8
+#----------------------------------------------------------------------------------------------------------------------------------------------------
+aspectj.home=/home/dk/github_workspace/AntCommons/ant_tasks/aspectj/aspectj1.8
+aspectj.jar=${aspectj.home}/lib/aspectjtools.jar
