AspectJの定義をbuild.xmlに追加
AspectJの定義をbuild.xmlに追加とメソッド実行時のトレースを追加しました。

--- a/build.properties
+++ b/build.properties
@@ -40,6 +40,22 @@ test_source.dir=./src/test/java
 test_resources.dir=./src/test/resources
 
 #----------------------------------------------------------------------------------------------------------------------------------------------------
+# [ \u6982\u8981 ] AspectJ\u7528\u30bd\u30fc\u30b9\u30b3\u30fc\u30c9\u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u306e\u6307\u5b9a
+# [ \u8aac\u660e ] \u30d3\u30eb\u30c9\u5bfe\u8c61\u306eAspectJ\u7528\u30bd\u30fc\u30b9\u30b3\u30fc\u30c9\u304c\u683c\u7d0d\u3055\u308c\u3066\u3044\u308b\u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u3092\u6307\u5b9a\u3057\u307e\u3059\u3002
+# [ \u5fc5\u9808 ] yes
+# [  \u4f8b  ] ./src/aspect/java
+#----------------------------------------------------------------------------------------------------------------------------------------------------
+aspect_source.dir=./src/aspect/java
+
+#----------------------------------------------------------------------------------------------------------------------------------------------------
+# [ \u6982\u8981 ] AspectJ\u7528\u30ea\u30bd\u30fc\u30b9\u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u306e\u6307\u5b9a
+# [ \u8aac\u660e ] AspectJ\u306b\u5fc5\u8981\u306a\u30d5\u30a1\u30a4\u30eb\u7fa4\u304c\u683c\u7d0d\u3055\u308c\u3066\u3044\u308b\u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u3092\u6307\u5b9a\u3057\u307e\u3059\u3002
+# [ \u5fc5\u9808 ] yes
+# [  \u4f8b  ] ./src/aspect/resources
+#----------------------------------------------------------------------------------------------------------------------------------------------------
+aspect_resources.dir=./src/aspect/resources
+
+#----------------------------------------------------------------------------------------------------------------------------------------------------
 # [ \u6982\u8981 ] Javadoc\u51fa\u529b\u5148\u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u306e\u6307\u5b9a
 # [ \u8aac\u660e ] \u30bd\u30fc\u30b9\u30b3\u30fc\u30c9\u3088\u308a\u4f5c\u6210\u3057\u305fJavadoc\u30d5\u30a1\u30a4\u30eb\u3092\u51fa\u529b\u3059\u308b\u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u3092\u6307\u5b9a\u3057\u307e\u3059\u3002
 # [ \u5fc5\u9808 ] yes
@@ -226,7 +242,7 @@ compile.copy.todir=${compile.javac.destdir}
 compile.copy.fileset.dir.src=${source.dir}
 compile.copy.fileset.dir.resources=${resources.dir}
 compile.copy.fileset.include.name=**/*
-# compile.copy.fileset.exclude.name=**/*.java
+# compile.copy.copy.fileset.exclude.name=**/*.java
 
 #####################################################################################################################################################
 # \u30c6\u30b9\u30c8\u7528\u30bd\u30fc\u30b9\u30b3\u30fc\u30c9\u30b3\u30f3\u30d1\u30a4\u30eb\u8a2d\u5b9a\u5024
@@ -389,8 +405,25 @@ checkstyle_execute.checkstyle.formatter.tofile=.checkstyle_errors.txt
 #####################################################################################################################################################
 # AspectJ\u5b9f\u884c\u6642\u8a2d\u5b9a\u5024
 #####################################################################################################################################################
-aspectj_execute.aspectj.home=${aspectj.home}
-aspectj_execute.aspectj.jar=${aspectj.jar}
+aspectj_compile.aspectj.home=${aspectj.home}
+aspectj_compile.aspectj.lib=${aspectj.home}/lib
+aspectj_compile.aspectj.jar=${aspectj_compile.aspectj.home}/lib/aspectjtools.jar
+aspectj_compile.delete.dir=${compile.dir}
+aspectj_compile.mkdir.dir=${compile.dir}
+aspectj_compile.iajc.sourceroots=${source.dir};${aspect_source.dir}
+aspectj_compile.iajc.destdir=${compile.dir}
+aspectj_compile.iajc.source=1.8
+aspectj_compile.iajc.deprecation=true
+aspectj_compile.iajc.debug=true
+aspectj_compile.iajc.encoding=${encoding}
+aspectj_compile.iajc.classpath=
+aspectj_compile.copy.todir=${compile.javac.destdir}
+aspectj_compile.copy.fileset.dir.src=${source.dir}
+aspectj_compile.copy.fileset.dir.resources=${resources.dir}
+aspectj_compile.copy.fileset.dir.aspect_src=${aspect_source.dir}
+aspectj_compile.copy.fileset.dir.aspect_resources=${aspect_resources.dir}
+aspectj_compile.copy.fileset.include.name=**/*
+aspectj_compile.copy.fileset.exclude.name=**/*.java
 
 #####################################################################################################################################################
 # \u30d3\u30eb\u30c9\u7528\u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u524a\u9664\u6642\u8a2d\u5b9a\u5024
