--- a/build_env.properties
+++ b/build_env.properties
@@ -31,5 +31,4 @@ checkstyle.config=${checkstyle.home}/sun_checks.xml
 # [ \u5fc5\u9808 ] yes
 # [  \u4f8b  ] /opt/aspectj/aspectj1.8
 #----------------------------------------------------------------------------------------------------------------------------------------------------
-aspectj.home=/home/dk/github_workspace/AntCommons/ant_tasks/aspectj/aspectj1.8
-aspectj.jar=${aspectj.home}/lib/aspectjtools.jar
+aspectj.home=/home/dk/aspectj1.8
