--- a/build.xml
+++ b/build.xml
@@ -38,8 +38,12 @@
 	  		<fileset dir="${library.dir}" includes="*.jar"/>
 	  		<fileset dir="${test.library.dir}" includes="*.jar"/>
 	  	</path>
+		<path id="_init.path.id.aspect">
+	  		<fileset dir="${aspectj_compile.aspectj.lib}" includes="*.jar"/>
+	  	</path>
 	  	<pathconvert property="_library.jars" refid="_init.path.id"/>
 	  	<pathconvert property="_test.library.jars" refid="_init.path.id.test"/>
+		<pathconvert property="_aspect.library.jars" refid="_init.path.id.aspect"/>
 	</target>
 	  
 	<!-- 
@@ -120,10 +124,6 @@
 		</taskdef>
 		<delete dir="${aspectj_compile.delete.dir}" />
 	  	<mkdir  dir="${aspectj_compile.mkdir.dir}"  />
-		<path id="_init.path.id.aspect">
-	  		<fileset dir="${aspectj_compile.aspectj.lib}" includes="*.jar"/>
-	  	</path>
-	  	<pathconvert property="_aspect.library.jars" refid="_init.path.id.aspect"/>
 		<iajc          sourceroots = "${aspectj_compile.iajc.sourceroots}" 
 			           source      = "${aspectj_compile.iajc.source}"
 			           destdir     = "${aspectj_compile.iajc.destdir}"
@@ -400,7 +400,7 @@
 		  		<pathelement path="${test_execute.junit.classpath.pathelement.location.test_resources}" />
 		  		<pathelement path="${test_execute.junit.classpath.pathelement.location.test_jar}" />
 		  		<pathelement path="${test_execute.junit.classpath.pathelement.location.jar}" />
-		  		<pathelement path="${_test.library.jars}" />
+		  		<pathelement path="${_test.library.jars};${_aspect.library.jars}" />
 	      	</classpath>
 		</junit>
 	</target>
