--- a/properties/test/Logger.properties
+++ b/properties/test/Logger.properties
@@ -12,7 +12,7 @@
 # [  \u4f8b  ] log4j.category.aaa.bbb = INFO, SYSOUT
 #----------------------------------------------------------------------------------------------------------------------------------------------------
 # log4j.rootLogger=DEBUG, ROOT
-log4j.category.jp.co.dk=INFO, CONSOL
+log4j.category.jp.co.dk=TRACE, CONSOL
 
 #----------------------------------------------------------------------------------------------------------------------------------------------------
 # [ \u6982\u8981 ] Log4J\u30a2\u30c0\u30d7\u30bf\u30fc
