プロパティにNeo4Jの項目を追加

--- a/properties/DataStoreManager.properties
+++ b/properties/DataStoreManager.properties
@@ -9,7 +9,7 @@
 # [ \u6982\u8981 ] \u63a5\u7d9a\u5148\u30c7\u30fc\u30bf\u30b9\u30c8\u30a2\u7a2e\u5225
 # [ \u8aac\u660e ] \u63a5\u7d9a\u5148\u306e\u30c7\u30fc\u30bf\u30d9\u30fc\u30b9\u540d\u79f0\u3001\u30d5\u30a1\u30a4\u30eb\u30bf\u30a4\u30d7\u3092\u6307\u5b9a\u3057\u307e\u3059\u3002
 # [ \u5fc5\u9808 ] yes
-# [  \u4f8b  ] oracle,mysql,postgresql,csv\u306e\u3044\u3065\u308c\u304b
+# [  \u4f8b  ] oracle,mysql,postgresql,neo4j,csv\u306e\u3044\u3065\u308c\u304b
 #----------------------------------------------------------------------------------------------------------------------------------------------------
 datastore.type=mysql
 
@@ -119,6 +119,32 @@ datastore.postgresql.user=posusr
 datastore.postgresql.password=postgresql
 #####################################################################################################################################################
 
+##\u3010NEO4J\u5171\u901a\u8a2d\u5b9a\u5024\u3011############################################################################################################################
+#----------------------------------------------------------------------------------------------------------------------------------------------------
+# [ \u6982\u8981 ] NEO4J\u306e\u63a5\u7d9a\u5148URL\u3092\u6307\u5b9a\u3057\u307e\u3059\u3002
+# [ \u8aac\u660e ] NEO4J\u30b5\u30fc\u30d0\u63a5\u7d9a\u5148URL\u3092\u6307\u5b9a\u3057\u307e\u3059\u3002\u63a5\u7d9a\u5148\u30c7\u30fc\u30bf\u30b9\u30c8\u30a2\u7a2e\u5225\u306b[NEO4J]\u3092\u6307\u5b9a\u3057\u305f\u5834\u5408\u306b\u4f7f\u7528\u3055\u308c\u307e\u3059\u3002
+#          IP\u30a2\u30c9\u30ec\u30b9\u306b\u3066\u6307\u5b9a\u3059\u308b\u5834\u5408\u3001IP\u30a2\u30c9\u30ec\u30b9+\u30dd\u30fc\u30c8\u3092\u6307\u5b9a\u3057\u3066\u304f\u3060\u3055\u3044\u3002
+# [ \u5fc5\u9808 ] yes
+# [  \u4f8b  ] IP\u30a2\u30c9\u30ec\u30b9\u306e\u5834\u5408\u3001192.168.1.10:5121\u7b49
+#----------------------------------------------------------------------------------------------------------------------------------------------------
+datastore.neo4j.url=neo4jserver:7474
+
+#----------------------------------------------------------------------------------------------------------------------------------------------------
+# [ \u6982\u8981 ] NEO4J\u306e\u63a5\u7d9a\u6642\u306e\u30e6\u30fc\u30b6\u540d\u3092\u6307\u5b9a\u3057\u307e\u3059\u3002
+# [ \u8aac\u660e ] NEO4J\u30b5\u30fc\u30d0\u63a5\u7d9a\u6642\u306e\u30e6\u30fc\u30b6\u540d\u3092\u6307\u5b9a\u3057\u307e\u3059\u3002\u63a5\u7d9a\u5148\u30c7\u30fc\u30bf\u30b9\u30c8\u30a2\u7a2e\u5225\u306b[NEO4J]\u3092\u6307\u5b9a\u3057\u305f\u5834\u5408\u306b\u4f7f\u7528\u3055\u308c\u307e\u3059\u3002
+# [ \u5fc5\u9808 ] yes
+# [  \u4f8b  ] neo4j
+#----------------------------------------------------------------------------------------------------------------------------------------------------
+datastore.neo4j.user=neo4j
+
+#----------------------------------------------------------------------------------------------------------------------------------------------------
+# [ \u6982\u8981 ] NEO4J\u306e\u63a5\u7d9a\u6642\u306e\u30d1\u30b9\u30ef\u30fc\u30c9\u3092\u6307\u5b9a\u3057\u307e\u3059\u3002
+# [ \u8aac\u660e ] NEO4J\u30b5\u30fc\u30d0\u63a5\u7d9a\u6642\u306e\u30d1\u30b9\u30ef\u30fc\u30c9\u3092\u6307\u5b9a\u3057\u307e\u3059\u3002\u63a5\u7d9a\u5148\u30c7\u30fc\u30bf\u30b9\u30c8\u30a2\u7a2e\u5225\u306b[NEO4J]\u3092\u6307\u5b9a\u3057\u305f\u5834\u5408\u306b\u4f7f\u7528\u3055\u308c\u307e\u3059\u3002
+# [ \u5fc5\u9808 ] yes
+# [  \u4f8b  ] neo4j
+#----------------------------------------------------------------------------------------------------------------------------------------------------
+datastore.neo4j.password=neo4j
+#####################################################################################################################################################
 
 ##\u3010\u500b\u5225\u8a2d\u5b9a\u3011########################################################################################################################################
 # [ \u6982\u8981 ] \u500b\u5225\u63a5\u7d9a\u5148\u6307\u5b9a
