Cypherクラスへcloneableを実装

--- a/build_env.properties
+++ b/build_env.properties
@@ -31,4 +31,4 @@ checkstyle.config=${checkstyle.home}/sun_checks.xml
 # [ \u5fc5\u9808 ] yes
 # [  \u4f8b  ] /opt/aspectj/aspectj1.8
 #----------------------------------------------------------------------------------------------------------------------------------------------------
-aspectj.home=/Users/dk/aspectj1.8
+aspectj.home=/home/dk/aspectj1.8
