--- a/build.properties
+++ b/build.properties
@@ -423,7 +423,7 @@ aspectj_compile.copy.fileset.dir.resources=${resources.dir}
 aspectj_compile.copy.fileset.dir.aspect_src=${aspect_source.dir}
 aspectj_compile.copy.fileset.dir.aspect_resources=${aspect_resources.dir}
 aspectj_compile.copy.fileset.include.name=**/*
-aspectj_compile.copy.fileset.exclude.name=**/*.java
+# aspectj_compile.copy.fileset.exclude.name=**/*.java
 
 #####################################################################################################################################################
 # \u30d3\u30eb\u30c9\u7528\u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u524a\u9664\u6642\u8a2d\u5b9a\u5024
