--- a/properties/DataStoreManager.properties
+++ b/properties/DataStoreManager.properties
@@ -11,7 +11,7 @@
 # [ \u5fc5\u9808 ] yes
 # [  \u4f8b  ] oracle,mysql,postgresql,neo4j,csv\u306e\u3044\u3065\u308c\u304b
 #----------------------------------------------------------------------------------------------------------------------------------------------------
-datastore.type=mysql
+datastore.type=oracle
 
 ##\u3010ORACLE\u5171\u901a\u8a2d\u5b9a\u5024\u3011################################################################################################################################
 #----------------------------------------------------------------------------------------------------------------------------------------------------
@@ -29,7 +29,7 @@ datastore.oracle.url=jdbc:oracle:thin:@oracleserver:5121:databasename
 # [ \u5fc5\u9808 ] yes
 # [  \u4f8b  ] testsid
 #----------------------------------------------------------------------------------------------------------------------------------------------------
-datastore.oracle.user=orausr
+datastore.oracle.user=oracleuser
 
 #----------------------------------------------------------------------------------------------------------------------------------------------------
 # [ \u6982\u8981 ] ORACLE\u306e\u63a5\u7d9a\u6642\u306e\u30d1\u30b9\u30ef\u30fc\u30c9\u3092\u6307\u5b9a\u3057\u307e\u3059\u3002
@@ -37,7 +37,7 @@ datastore.oracle.user=orausr
 # [ \u5fc5\u9808 ] yes
 # [  \u4f8b  ] testsid
 #----------------------------------------------------------------------------------------------------------------------------------------------------
-datastore.oracle.password=oracle
+datastore.oracle.password=12345
 #####################################################################################################################################################
 
 ##\u3010MYSQL\u5171\u901a\u8a2d\u5b9a\u5024\u3011#################################################################################################################################
@@ -56,7 +56,7 @@ datastore.mysql.url=jdbc:mysql://mysqlserver:5121/databasename
 # [ \u5fc5\u9808 ] yes
 # [  \u4f8b  ] testsid
 #----------------------------------------------------------------------------------------------------------------------------------------------------
-datastore.mysql.user=mysqlusr
+datastore.mysql.user=mysqluser
 
 #----------------------------------------------------------------------------------------------------------------------------------------------------
 # [ \u6982\u8981 ] MYSQL\u306e\u63a5\u7d9a\u6642\u306e\u30d1\u30b9\u30ef\u30fc\u30c9\u3092\u6307\u5b9a\u3057\u307e\u3059\u3002
@@ -64,7 +64,7 @@ datastore.mysql.user=mysqlusr
 # [ \u5fc5\u9808 ] yes
 # [  \u4f8b  ] testsid
 #----------------------------------------------------------------------------------------------------------------------------------------------------
-datastore.mysql.password=mysql
+datastore.mysql.password=12345
 #####################################################################################################################################################
 
 ##\u3010POSTGRESQL\u5171\u901a\u8a2d\u5b9a\u5024\u3011############################################################################################################################
@@ -83,7 +83,7 @@ datastore.postgresql.url=jdbc:postgresql://postgresqlserver:5121/databasename
 # [ \u5fc5\u9808 ] yes
 # [  \u4f8b  ] testsid
 #----------------------------------------------------------------------------------------------------------------------------------------------------
-datastore.postgresql.user=posusr
+datastore.postgresql.user=postgressqluser
 
 #----------------------------------------------------------------------------------------------------------------------------------------------------
 # [ \u6982\u8981 ] POSTGRESQL\u306e\u63a5\u7d9a\u6642\u306e\u30d1\u30b9\u30ef\u30fc\u30c9\u3092\u6307\u5b9a\u3057\u307e\u3059\u3002
@@ -91,7 +91,7 @@ datastore.postgresql.user=posusr
 # [ \u5fc5\u9808 ] yes
 # [  \u4f8b  ] testsid
 #----------------------------------------------------------------------------------------------------------------------------------------------------
-datastore.postgresql.password=postgresql
+datastore.postgresql.password=12345
 #####################################################################################################################################################
 
 ##\u3010NEO4J\u5171\u901a\u8a2d\u5b9a\u5024\u3011############################################################################################################################
@@ -110,7 +110,7 @@ datastore.neo4j.url=neo4jserver:7474
 # [ \u5fc5\u9808 ] yes
 # [  \u4f8b  ] neo4j
 #----------------------------------------------------------------------------------------------------------------------------------------------------
-datastore.neo4j.user=neo4j
+datastore.neo4j.user=neo4juser
 
 #----------------------------------------------------------------------------------------------------------------------------------------------------
 # [ \u6982\u8981 ] NEO4J\u306e\u63a5\u7d9a\u6642\u306e\u30d1\u30b9\u30ef\u30fc\u30c9\u3092\u6307\u5b9a\u3057\u307e\u3059\u3002
@@ -118,7 +118,7 @@ datastore.neo4j.user=neo4j
 # [ \u5fc5\u9808 ] yes
 # [  \u4f8b  ] neo4j
 #----------------------------------------------------------------------------------------------------------------------------------------------------
-datastore.neo4j.password=neo4j
+datastore.neo4j.password=12345
 #####################################################################################################################################################
 
 ##\u3010\u500b\u5225\u8a2d\u5b9a\u3011########################################################################################################################################
@@ -134,9 +134,9 @@ datastore.oracle.url.USERS=jdbc:oracle:thin:@usersoracleserver:5121:databasename
 datastore.oracle.user.USERS=usersorausr
 datastore.oracle.password.USERS=usersoracle
 # UESRS\u30c6\u30fc\u30d6\u30eb\u306eMYSQL\u8a2d\u5b9a\u5024
-datastore.mysql.url.USERS=jdbc:mysql://usersmysqlserver:5121/databasename
-datastore.mysql.user.USERS=usersmysqlusr
-datastore.mysql.password.USERS=usersmysql
+datastore.mysql.url.USERS=jdbc:mysql://localhost:3306/test_db?useUnicode=true&characterEncoding=UTF-8
+datastore.mysql.user.USERS=test_user
+datastore.mysql.password.USERS=123456
 # UESRS\u30c6\u30fc\u30d6\u30eb\u306ePOSTGRESQL\u8a2d\u5b9a\u5024
 datastore.postgresql.url.USERS=jdbc:postgresql://userspostgresqlserver:5121/databasename
 datastore.postgresql.user.USERS=usersposusr
