--- a/properties/test/DataStoreManager.properties
+++ b/properties/test/DataStoreManager.properties
@@ -9,10 +9,9 @@
 # [ \u6982\u8981 ] \u63a5\u7d9a\u5148\u30c7\u30fc\u30bf\u30b9\u30c8\u30a2\u7a2e\u5225
 # [ \u8aac\u660e ] \u63a5\u7d9a\u5148\u306e\u30c7\u30fc\u30bf\u30d9\u30fc\u30b9\u540d\u79f0\u3001\u30d5\u30a1\u30a4\u30eb\u30bf\u30a4\u30d7\u3092\u6307\u5b9a\u3057\u307e\u3059\u3002
 # [ \u5fc5\u9808 ] yes
-# [  \u4f8b  ] oracle,mysql,postgresql,csv\u306e\u3044\u3065\u308c\u304b
+# [  \u4f8b  ] oracle,mysql,postgresql,neo4j,csv\u306e\u3044\u3065\u308c\u304b
 #----------------------------------------------------------------------------------------------------------------------------------------------------
-datastore.type=mysql
-
+datastore.type=oracle
 
 ##\u3010ORACLE\u5171\u901a\u8a2d\u5b9a\u5024\u3011################################################################################################################################
 #----------------------------------------------------------------------------------------------------------------------------------------------------
@@ -22,15 +21,7 @@ datastore.type=mysql
 # [ \u5fc5\u9808 ] yes
 # [  \u4f8b  ] IP\u30a2\u30c9\u30ec\u30b9\u306e\u5834\u5408\u3001192.168.1.10:5121\u7b49
 #----------------------------------------------------------------------------------------------------------------------------------------------------
-# datastore.oracle.url=oracleserver:5121
-
-#----------------------------------------------------------------------------------------------------------------------------------------------------
-# [ \u6982\u8981 ] ORACLE\u306e\u63a5\u7d9a\u5148SID\u3092\u6307\u5b9a\u3057\u307e\u3059\u3002
-# [ \u8aac\u660e ] ORACLE\u30b5\u30fc\u30d0\u63a5\u7d9a\u5148SID\u3092\u6307\u5b9a\u3057\u307e\u3059\u3002\u63a5\u7d9a\u5148\u30c7\u30fc\u30bf\u30b9\u30c8\u30a2\u7a2e\u5225\u306b[oracle]\u3092\u6307\u5b9a\u3057\u305f\u5834\u5408\u306b\u4f7f\u7528\u3055\u308c\u307e\u3059\u3002
-# [ \u5fc5\u9808 ] yes
-# [  \u4f8b  ] testsid
-#----------------------------------------------------------------------------------------------------------------------------------------------------
-# datastore.oracle.sid=oralcesid
+datastore.oracle.url=jdbc:oracle:thin:@oracleserver:5121:databasename
 
 #----------------------------------------------------------------------------------------------------------------------------------------------------
 # [ \u6982\u8981 ] ORACLE\u306e\u63a5\u7d9a\u6642\u306e\u30e6\u30fc\u30b6\u540d\u3092\u6307\u5b9a\u3057\u307e\u3059\u3002
@@ -38,7 +29,7 @@ datastore.type=mysql
 # [ \u5fc5\u9808 ] yes
 # [  \u4f8b  ] testsid
 #----------------------------------------------------------------------------------------------------------------------------------------------------
-# datastore.oracle.user=orausr
+datastore.oracle.user=oracleuser
 
 #----------------------------------------------------------------------------------------------------------------------------------------------------
 # [ \u6982\u8981 ] ORACLE\u306e\u63a5\u7d9a\u6642\u306e\u30d1\u30b9\u30ef\u30fc\u30c9\u3092\u6307\u5b9a\u3057\u307e\u3059\u3002
@@ -46,7 +37,7 @@ datastore.type=mysql
 # [ \u5fc5\u9808 ] yes
 # [  \u4f8b  ] testsid
 #----------------------------------------------------------------------------------------------------------------------------------------------------
-# datastore.oracle.password=oracle
+datastore.oracle.password=12345
 #####################################################################################################################################################
 
 ##\u3010MYSQL\u5171\u901a\u8a2d\u5b9a\u5024\u3011#################################################################################################################################
@@ -57,15 +48,7 @@ datastore.type=mysql
 # [ \u5fc5\u9808 ] yes
 # [  \u4f8b  ] IP\u30a2\u30c9\u30ec\u30b9\u306e\u5834\u5408\u3001192.168.1.10:5121\u7b49
 #----------------------------------------------------------------------------------------------------------------------------------------------------
-datastore.mysql.url=localhost:3306
-
-#----------------------------------------------------------------------------------------------------------------------------------------------------
-# [ \u6982\u8981 ] MYSQL\u306e\u63a5\u7d9a\u5148SID\u3092\u6307\u5b9a\u3057\u307e\u3059\u3002
-# [ \u8aac\u660e ] MYSQL\u30b5\u30fc\u30d0\u63a5\u7d9a\u5148SID\u3092\u6307\u5b9a\u3057\u307e\u3059\u3002\u63a5\u7d9a\u5148\u30c7\u30fc\u30bf\u30b9\u30c8\u30a2\u7a2e\u5225\u306b[mysql]\u3092\u6307\u5b9a\u3057\u305f\u5834\u5408\u306b\u4f7f\u7528\u3055\u308c\u307e\u3059\u3002
-# [ \u5fc5\u9808 ] yes
-# [  \u4f8b  ] testsid
-#----------------------------------------------------------------------------------------------------------------------------------------------------
-datastore.mysql.sid=test_db
+datastore.mysql.url=jdbc:mysql://mysqlserver:5121/databasename
 
 #----------------------------------------------------------------------------------------------------------------------------------------------------
 # [ \u6982\u8981 ] MYSQL\u306e\u63a5\u7d9a\u6642\u306e\u30e6\u30fc\u30b6\u540d\u3092\u6307\u5b9a\u3057\u307e\u3059\u3002
@@ -73,7 +56,7 @@ datastore.mysql.sid=test_db
 # [ \u5fc5\u9808 ] yes
 # [  \u4f8b  ] testsid
 #----------------------------------------------------------------------------------------------------------------------------------------------------
-datastore.mysql.user=test_user
+datastore.mysql.user=mysqluser
 
 #----------------------------------------------------------------------------------------------------------------------------------------------------
 # [ \u6982\u8981 ] MYSQL\u306e\u63a5\u7d9a\u6642\u306e\u30d1\u30b9\u30ef\u30fc\u30c9\u3092\u6307\u5b9a\u3057\u307e\u3059\u3002
@@ -81,7 +64,7 @@ datastore.mysql.user=test_user
 # [ \u5fc5\u9808 ] yes
 # [  \u4f8b  ] testsid
 #----------------------------------------------------------------------------------------------------------------------------------------------------
-datastore.mysql.password=123456
+datastore.mysql.password=12345
 #####################################################################################################################################################
 
 ##\u3010POSTGRESQL\u5171\u901a\u8a2d\u5b9a\u5024\u3011############################################################################################################################
@@ -92,15 +75,7 @@ datastore.mysql.password=123456
 # [ \u5fc5\u9808 ] yes
 # [  \u4f8b  ] IP\u30a2\u30c9\u30ec\u30b9\u306e\u5834\u5408\u3001192.168.1.10:5121\u7b49
 #----------------------------------------------------------------------------------------------------------------------------------------------------
-# datastore.postgresql.url=postgresqlserver:5121
-
-#----------------------------------------------------------------------------------------------------------------------------------------------------
-# [ \u6982\u8981 ] POSTGRESQL\u306e\u63a5\u7d9a\u5148SID\u3092\u6307\u5b9a\u3057\u307e\u3059\u3002
-# [ \u8aac\u660e ] POSTGRESQL\u30b5\u30fc\u30d0\u63a5\u7d9a\u5148SID\u3092\u6307\u5b9a\u3057\u307e\u3059\u3002\u63a5\u7d9a\u5148\u30c7\u30fc\u30bf\u30b9\u30c8\u30a2\u7a2e\u5225\u306b[postgresql]\u3092\u6307\u5b9a\u3057\u305f\u5834\u5408\u306b\u4f7f\u7528\u3055\u308c\u307e\u3059\u3002
-# [ \u5fc5\u9808 ] yes
-# [  \u4f8b  ] testsid
-#----------------------------------------------------------------------------------------------------------------------------------------------------
-# datastore.postgresql.sid=postgresqlsid
+datastore.postgresql.url=jdbc:postgresql://postgresqlserver:5121/databasename
 
 #----------------------------------------------------------------------------------------------------------------------------------------------------
 # [ \u6982\u8981 ] POSTGRESQL\u306e\u63a5\u7d9a\u6642\u306e\u30e6\u30fc\u30b6\u540d\u3092\u6307\u5b9a\u3057\u307e\u3059\u3002
@@ -108,7 +83,7 @@ datastore.mysql.password=123456
 # [ \u5fc5\u9808 ] yes
 # [  \u4f8b  ] testsid
 #----------------------------------------------------------------------------------------------------------------------------------------------------
-# datastore.postgresql.user=posusr
+datastore.postgresql.user=postgressqluser
 
 #----------------------------------------------------------------------------------------------------------------------------------------------------
 # [ \u6982\u8981 ] POSTGRESQL\u306e\u63a5\u7d9a\u6642\u306e\u30d1\u30b9\u30ef\u30fc\u30c9\u3092\u6307\u5b9a\u3057\u307e\u3059\u3002
@@ -116,9 +91,35 @@ datastore.mysql.password=123456
 # [ \u5fc5\u9808 ] yes
 # [  \u4f8b  ] testsid
 #----------------------------------------------------------------------------------------------------------------------------------------------------
-# datastore.postgresql.password=postgresql
+datastore.postgresql.password=12345
 #####################################################################################################################################################
 
+##\u3010NEO4J\u5171\u901a\u8a2d\u5b9a\u5024\u3011############################################################################################################################
+#----------------------------------------------------------------------------------------------------------------------------------------------------
+# [ \u6982\u8981 ] NEO4J\u306e\u63a5\u7d9a\u5148URL\u3092\u6307\u5b9a\u3057\u307e\u3059\u3002
+# [ \u8aac\u660e ] NEO4J\u30b5\u30fc\u30d0\u63a5\u7d9a\u5148URL\u3092\u6307\u5b9a\u3057\u307e\u3059\u3002\u63a5\u7d9a\u5148\u30c7\u30fc\u30bf\u30b9\u30c8\u30a2\u7a2e\u5225\u306b[NEO4J]\u3092\u6307\u5b9a\u3057\u305f\u5834\u5408\u306b\u4f7f\u7528\u3055\u308c\u307e\u3059\u3002
+#          IP\u30a2\u30c9\u30ec\u30b9\u306b\u3066\u6307\u5b9a\u3059\u308b\u5834\u5408\u3001IP\u30a2\u30c9\u30ec\u30b9+\u30dd\u30fc\u30c8\u3092\u6307\u5b9a\u3057\u3066\u304f\u3060\u3055\u3044\u3002
+# [ \u5fc5\u9808 ] yes
+# [  \u4f8b  ] IP\u30a2\u30c9\u30ec\u30b9\u306e\u5834\u5408\u3001192.168.1.10:5121\u7b49
+#----------------------------------------------------------------------------------------------------------------------------------------------------
+datastore.neo4j.url=neo4jserver:7474
+
+#----------------------------------------------------------------------------------------------------------------------------------------------------
+# [ \u6982\u8981 ] NEO4J\u306e\u63a5\u7d9a\u6642\u306e\u30e6\u30fc\u30b6\u540d\u3092\u6307\u5b9a\u3057\u307e\u3059\u3002
+# [ \u8aac\u660e ] NEO4J\u30b5\u30fc\u30d0\u63a5\u7d9a\u6642\u306e\u30e6\u30fc\u30b6\u540d\u3092\u6307\u5b9a\u3057\u307e\u3059\u3002\u63a5\u7d9a\u5148\u30c7\u30fc\u30bf\u30b9\u30c8\u30a2\u7a2e\u5225\u306b[NEO4J]\u3092\u6307\u5b9a\u3057\u305f\u5834\u5408\u306b\u4f7f\u7528\u3055\u308c\u307e\u3059\u3002
+# [ \u5fc5\u9808 ] yes
+# [  \u4f8b  ] neo4j
+#----------------------------------------------------------------------------------------------------------------------------------------------------
+datastore.neo4j.user=neo4juser
+
+#----------------------------------------------------------------------------------------------------------------------------------------------------
+# [ \u6982\u8981 ] NEO4J\u306e\u63a5\u7d9a\u6642\u306e\u30d1\u30b9\u30ef\u30fc\u30c9\u3092\u6307\u5b9a\u3057\u307e\u3059\u3002
+# [ \u8aac\u660e ] NEO4J\u30b5\u30fc\u30d0\u63a5\u7d9a\u6642\u306e\u30d1\u30b9\u30ef\u30fc\u30c9\u3092\u6307\u5b9a\u3057\u307e\u3059\u3002\u63a5\u7d9a\u5148\u30c7\u30fc\u30bf\u30b9\u30c8\u30a2\u7a2e\u5225\u306b[NEO4J]\u3092\u6307\u5b9a\u3057\u305f\u5834\u5408\u306b\u4f7f\u7528\u3055\u308c\u307e\u3059\u3002
+# [ \u5fc5\u9808 ] yes
+# [  \u4f8b  ] neo4j
+#----------------------------------------------------------------------------------------------------------------------------------------------------
+datastore.neo4j.password=12345
+#####################################################################################################################################################
 
 ##\u3010\u500b\u5225\u8a2d\u5b9a\u3011########################################################################################################################################
 # [ \u6982\u8981 ] \u500b\u5225\u63a5\u7d9a\u5148\u6307\u5b9a
@@ -127,21 +128,18 @@ datastore.mysql.password=123456
 #          \u4f8b\u3048\u3070\u3001\u901a\u5e38\u306e\u63a5\u7d9a\u5148\u306foracle\u30c7\u30fc\u30bf\u30d9\u30fc\u30b9\u306b\u63a5\u7d9a\u3001USERS\u30c6\u30fc\u30d6\u30eb\u306e\u307fMYSQL\u30c7\u30fc\u30bf\u30d9\u30fc\u30b9\u3092\u6307\u5b9a\u3059\u308b\u5834\u5408\u306e\u307f\u4ee5\u4e0b\u306e\u63a5\u7d9a\u5148\u306e\u3088\u3046\u306b\u6307\u5b9a\u3059\u308b\u3002
 #####################################################################################################################################################
 # UESRS\u30c6\u30fc\u30d6\u30eb\u306e\u63a5\u7d9a\u5148\u30c7\u30fc\u30bf\u30b9\u30c8\u30a2\u7a2e\u5225
-# datastore.type.USERS=mysql
+datastore.type.USERS=mysql
 # UESRS\u30c6\u30fc\u30d6\u30eb\u306eORACLE\u8a2d\u5b9a\u5024
-# datastore.oracle.url.USERS=usersoracleserver:5121
-# datastore.oracle.sid.USERS=usersoralcesid
-# datastore.oracle.user.USERS=usersorausr
-# datastore.oracle.password.USERS=usersoracle
+datastore.oracle.url.USERS=jdbc:oracle:thin:@usersoracleserver:5121:databasename
+datastore.oracle.user.USERS=usersorausr
+datastore.oracle.password.USERS=usersoracle
 # UESRS\u30c6\u30fc\u30d6\u30eb\u306eMYSQL\u8a2d\u5b9a\u5024
-# datastore.mysql.url.USERS=usersmysqlserver:5121
-# datastore.mysql.sid.USERS=usersmysqlsid
-# datastore.mysql.user.USERS=usersmysqlusr
-# datastore.mysql.password.USERS=usersmysql
+datastore.mysql.url.USERS=jdbc:mysql://localhost:3306/test_db?useUnicode=true&characterEncoding=UTF-8
+datastore.mysql.user.USERS=test_user
+datastore.mysql.password.USERS=123456
 # UESRS\u30c6\u30fc\u30d6\u30eb\u306ePOSTGRESQL\u8a2d\u5b9a\u5024
-# datastore.postgresql.url.USERS=userspostgresqlserver:5121
-# datastore.postgresql.sid.USERS=userspostgresqlsid
-# datastore.postgresql.user.USERS=usersposusr
-# datastore.postgresql.password.USERS=userspostgresql
+datastore.postgresql.url.USERS=jdbc:postgresql://userspostgresqlserver:5121/databasename
+datastore.postgresql.user.USERS=usersposusr
+datastore.postgresql.password.USERS=userspostgresql
 #####################################################################################################################################################
 
